--- a/index.html
+++ b/index.html
@@ -29,19 +29,32 @@
                 
             </div>
             
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quas sint et nihil iusto eius nostrum sit error, repellat optio quisquam! Magnam dolore iusto cumque. Nostrum error iste neque maiores.</p>
+            <p>I am an Undergraduate, pursuing Electronics and Telecommunication Engineering.
+                I am passionate about Machine Learning, which is a subset of Artificial Intelligence.
+                I am enthusiastic about learning in community and networking with people.
+            </p>
             <h2>Experience</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem.</p>
-
+            <table border="1"> 
+                <tr><th> Student Chapter </th>
+                    <th> Institiuonal Club </th></tr>
+                <tr><td> GDSC RSCOE </td><td> Rotaract Club Of RSCOE </td></tr>
+                <tr><td> TEDxJSPMRSCOE </td></tr>
+            </table>
             <h2>Skills</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem obcaecati excepturi! Cupiditate eaque itaque magni voluptatibus neque nobis est dolor? Atque sunt minus ipsa asperiores. At.</p>
+            <table border="'1"> 
+                <tr><th> Technical </th>
+                    <th> Non-Technical </th></tr>
+                <tr><td> Machine Learning </td><td> Management </td></tr>
+                <tr><td> Python </td><td> Communication </td></tr>
+                <tr><td> OPENVINO </td><td> Creative </td></tr>
+            </table>
             <h2>Projects</h2>
-            <a href="#">Project 1</a>
-            <a href="#">Project 2</a>
-            <a href="#">Project 3</a>
+            <a href="#https://github.com/shreyakerur/Online-Fraud-Payment-Detection/tree/main">Project 1</a>
+            <a href="#https://shreyakerur.github.io/My-Website1/">Project 2</a>
+            <a href="#https://shreyakerur.github.io/My-Website2/">Project 3</a>
 
-            <h2>Contact</h2>
-            <p>myEmail@email.com</p>
+            <h2>Social media: @bloomingpapillon</h2>
+            <p>myEmail: shreyakerur@gmail.com</p>
         </div>
     </div>
     <script src="./script.js"></script>
